--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/google-services.json
 
 # C++ and CMake related ignores
 *.cpp
 *.h
 CMakeLists.txt
 build/
+firebase.json
