Add mobile_scanner dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.6.0
   google_sign_in: ^6.3.0
   flutter_local_notifications: ^19.3.0
+  mobile_scanner: ^3.5.5
 
 dev_dependencies:
   flutter_test:
