Optimize Gradle settings for improved stability and lower memory usage

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,15 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+# org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+# android.useAndroidX=true
+# android.enableJetifier=true
+# org.gradle.daemon=false
+
+
+# Set max heap size to 2GB (lower than 4GB to avoid native memory issues)
+org.gradle.jvmargs=-Xmx2G -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Disable Gradle daemon to avoid crashes (slower builds but more stable)
+org.gradle.daemon=false
+
+# Enable AndroidX and Jetifier (usually needed)
 android.useAndroidX=true
 android.enableJetifier=true
